--- a/demo/forms.html
+++ b/demo/forms.html
@@ -9,7 +9,46 @@
 </head>
 
 <body class="app">
-    <div class="container">
+
+    <header class="app-header">
+        <a href="/" class="app-header__logo">HQ Admin</a>
+        <a class="app-sidebar__toggle" href="#" data-toggle="sidebar" aria-label="Hide Sidebar"><span class="fa fa-bars"></span></a>
+        <ul class="app-nav">
+            <li class="app-search">
+                <input class="app-search__input" type="search" placeholder="search">
+                <button class="app-search__button"><i class="fa fa-search"></i></button>
+            </li>
+            <li class="dropdown">
+                <a class="app-nav__item" href="#" data-toggle="dropdown" aria-label="Open Menu">
+                    <i class="fa fa-user fa-lg"></i>
+                </a>
+                <ul class="dropdown-menu setting-menu dropdown-menu-right">
+                    <li><a class="dropdown-item" href=""><i class="fa fa-cog"></i>Setting</a></li>
+                    <li><a class="dropdown-item" href=""><i class="fa fa-user"></i>Profile</a></li>
+                    <li><a class="dropdown-item" href=""><i class="fa fa-sign-out-alt"></i>Logout</a></li>
+
+
+                </ul>
+
+            </li>
+        </ul>
+    </header>
+    <aside class="app-sidebar">
+        <ul class="app-menu">
+            <li><a class="app-menu__item" href="/index.html">Index</a></li>
+            <li><a class="app-menu__item" href="/cards.html">Cards</a></li>
+            <li><a class="app-menu__item" href="/forms.html">Forms</a></li>
+            <li><a class="app-menu__item" href="/tables.html">Tables</a></li>
+
+        </ul>
+
+    </aside>
+    <main class="app-content">
+        <div class="app-title">
+            <h5>Forms Page</h5>
+        </div>
+
+
         <div class="row">
             <div class="col-md-6">
                 <form>
