changed header from hq-admin to tourism sidebar circular btn added

--- a/demo/cards.html
+++ b/demo/cards.html
@@ -11,7 +11,7 @@
 <body class="app">
 
     <header class="app-header">
-        <a href="/" class="app-header__logo">HQ Admin</a>
+        <a href="/" class="app-header__logo">Tourism</a>
         <a class="app-sidebar__toggle" href="#" data-toggle="sidebar" aria-label="Hide Sidebar"><span
                 class="fa fa-bars"></span></a>
         <ul class="app-nav">
@@ -35,7 +35,7 @@
     <aside class="app-sidebar">
         <ul class="app-menu">
             <li><a class="app-menu__item" href="/index.html">Index</a></li>
-            <li><a class="app-menu__item" href="/cards.html">Cards</a></li>
+            <li><a class="app-menu__item active" href="/cards.html">Cards</a></li>
             <li><a class="app-menu__item" href="/forms.html">Forms</a></li>
             <li><a class="app-menu__item" href="/tables.html">Tables</a></li>
         </ul>
@@ -47,7 +47,7 @@
 
         <div class="row">
 
-            <div class="col-6">
+            <div class="col-md-6 mt-4">
                 <div class="card">
                     <div class="card-header">
                         <h2>Card Title</h2>
@@ -62,7 +62,7 @@
                 </div>
             </div>
 
-            <div class="col-6">
+            <div class="col-md-6 mt-4">
                 <div class="card">
                     <div class="card-header">
                         <h2>Card Title</h2>
@@ -80,9 +80,9 @@
         </div>
         <div class="row">
 
-            <div class="col-6 mt-4">
+            <div class="col-md-6 mt-4">
                 <div class="card">
-                    <div class="card-header bg-primary text-white">
+                    <div class="card-header bg-secondary text-white">
                         <h2>Card Title</h2>
                     </div>
                     <div class="card-body">
@@ -95,7 +95,7 @@
                 </div>
             </div>
 
-            <div class="col-6 mt-4">
+            <div class="col-md-6 mt-4">
                 <div class="card">
                     <div class="card-header">
                         <h2>Card Title</h2>
