--- a/demo/index.html
+++ b/demo/index.html
@@ -12,8 +12,8 @@
 <body class="app">
 
     <header class="app-header">
-        <a href="/" class="app-header__logo">HQ Admin</a>
-        <a class="app-sidebar__toggle" href="#" data-toggle="sidebar" aria-label="Hide Sidebar"><span class="fa fa-bars"></span></a>
+        <a href="/" class="app-header__logo">Tourism</a>
+        <a class="app-sidebar__toggle" href="#" data-toggle="sidebar" aria-label="Hide Sidebar"><span class="fa fa-bars fa-lg"></span></a>
         <ul class="app-nav">
             <li class="app-search">
                 <input class="app-search__input" type="search" placeholder="search">
@@ -36,7 +36,7 @@
     </header>
     <aside class="app-sidebar">
         <ul class="app-menu">
-            <li><a class="app-menu__item" href="/index.html">Index</a></li>
+            <li><a class="app-menu__item active" href="/index.html">Index</a></li>
             <li><a class="app-menu__item" href="/cards.html">Cards</a></li>
             <li><a class="app-menu__item" href="/forms.html">Forms</a></li>
             <li><a class="app-menu__item" href="/tables.html">Tables</a></li>
@@ -49,7 +49,7 @@
             <h5>Index Page</h5>
         </div>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 mt-4">
                 <div class="card">
                     <h5 class="card-header">Featured</h5>
                     <div class="card-body">
@@ -59,7 +59,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mt-4">
                 <div class="card">
                     <h5 class="card-header">Featured</h5>
                     <div class="card-body">
