--- a/demo/forms.html
+++ b/demo/forms.html
@@ -11,7 +11,7 @@
 <body class="app">
 
     <header class="app-header">
-        <a href="/" class="app-header__logo">HQ Admin</a>
+        <a href="/" class="app-header__logo">Tourism</a>
         <a class="app-sidebar__toggle" href="#" data-toggle="sidebar" aria-label="Hide Sidebar"><span class="fa fa-bars"></span></a>
         <ul class="app-nav">
             <li class="app-search">
@@ -37,7 +37,7 @@
         <ul class="app-menu">
             <li><a class="app-menu__item" href="/index.html">Index</a></li>
             <li><a class="app-menu__item" href="/cards.html">Cards</a></li>
-            <li><a class="app-menu__item" href="/forms.html">Forms</a></li>
+            <li><a class="app-menu__item active" href="/forms.html">Forms</a></li>
             <li><a class="app-menu__item" href="/tables.html">Tables</a></li>
 
         </ul>
